--- a/styles/scss/layout/_header.scss
+++ b/styles/scss/layout/_header.scss
@@ -4,4 +4,6 @@
 	justify-content: center;
 	align-items: center;
 	box-shadow: 0 4px 5px rgba($color-black, 0.2);
+	position: relative;
+	background-color: $color-white;
 }
