--- a/styles/scss/pages/_accueil.scss
+++ b/styles/scss/pages/_accueil.scss
@@ -1,6 +1,6 @@
 .localisation {
 	height: 50px;
-	background-color: rgba($color-black, 0.1);
+	background-color: $color-grey-light2;
 
 	display: flex;
 	justify-content: center;
@@ -16,7 +16,7 @@
 
 .explorer {
 	padding: 2rem;
-	background-color: rgba($color-black, 0.05);
+	background-color: $color-grey-light;
 	height: 30rem;
 	display: flex;
 	flex-direction: column;
@@ -44,7 +44,7 @@
 		&--items {
 			position: relative;
 			counter-increment: item;
-			background-color: rgba($color-black, 0.05);
+			background-color: $color-grey-light;
 			border-radius: 20px;
 			box-shadow: 0px 2px 10px rgba($color-black, 0.2);
 			padding: 1rem;
@@ -54,7 +54,7 @@
 
 			&-logo {
 				margin: 0 2.5rem;
-				color: rgba($color-black, 0.5);
+				color: $color-grey-light;
 			}
 
 			&:before {
@@ -77,5 +77,59 @@
 }
 
 .restaurant {
-	background-color: rgba($color-black, 0.05);
+	padding: 3rem;
+	background-color: $color-grey-light;
+
+	&__link {
+		margin: 0 10px;
+		text-decoration: none;
+		color: $color-black;
+
+		& .card {
+			margin: 0;
+			background-color: $color-white;
+			border-radius: 15px;
+			box-shadow: 0 2px 14px rgba($color-black, 0.4);
+			overflow: hidden;
+
+			&__description {
+				display: flex;
+				justify-content: space-between;
+				padding: 15px 10px;
+
+				& p {
+					margin: 5px 0;
+				}
+
+				&--icon {
+					font-size: 28px;
+				}
+			}
+		}
+
+		& .img--la_palette_du_gout {
+			background: url('./../../../../images/restaurants/la_palette_du_gout.jpg');
+		}
+
+		& .img--la_note_enchantee {
+			background: url('./../../../../images/restaurants/la_note_enchantee.jpg');
+		}
+
+		& .img--a_la_francaise {
+			background: url('./../../../../images/restaurants/a_la_francaise.jpg');
+		}
+
+		& .img--le_delice_des_sens {
+			background: url('./../../../../images/restaurants/le_delice_des_sens.jpg');
+		}
+
+		& .img {
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			width: 100%;
+			height: 200px;
+			overflow: hidden;
+		}
+	}
 }
