:bug: liens / img

--- a/styles/scss/layout/_page-restaurants.scss
+++ b/styles/scss/layout/_page-restaurants.scss
@@ -26,7 +26,7 @@
 	margin-top: -50px;
 	overflow: hidden;
 	border-radius: 50px;
-	background-color: $color-grey-light;
+	background-color: $color-grey-very-light;
 	padding: 30px 20px;
 
 	display: flex;
