--- a/styles/scss/utils/_variables.scss
+++ b/styles/scss/utils/_variables.scss
@@ -5,7 +5,7 @@ $color-tertiary: #99e2d0;
 $color-black: black;
 
 $color-grey-dark: #353535;
-$color-grey-light2: #eaeaea;
-$color-grey-light: #f6f6f6;
+$color-grey-light: #eaeaea;
+$color-grey-very-light: #f6f6f6;
 
 $color-white: white;
