--- a/styles/scss/pages/_accueil.scss
+++ b/styles/scss/pages/_accueil.scss
@@ -108,19 +108,19 @@
 		}
 
 		& .img--la_palette_du_gout {
-			background: url('./../../../../images/restaurants/la_palette_du_gout.jpg');
+			background: url('../../images/restaurants/la_palette_du_gout.jpg');
 		}
 
 		& .img--la_note_enchantee {
-			background: url('/images/restaurants/la_note_enchantee.jpg');
+			background: url('../../images/restaurants/la_note_enchantee.jpg');
 		}
 
 		& .img--a_la_francaise {
-			background: url('/images/restaurants/a_la_francaise.jpg');
+			background: url('../../images/restaurants/a_la_francaise.jpg');
 		}
 
 		& .img--le_delice_des_sens {
-			background: url('/images/restaurants/le_delice_des_sens.jpg');
+			background: url('../../images/restaurants/le_delice_des_sens.jpg');
 		}
 
 		& .img {
