--- a/styles/scss/pages/_accueil.scss
+++ b/styles/scss/pages/_accueil.scss
@@ -81,59 +81,89 @@
 	background-color: $color-grey-very-light;
 
 	&__link {
-		margin: 0 10px;
 		text-decoration: none;
 		color: $color-black;
+	}
 
-		& .card {
-			margin: 0;
-			background-color: $color-white;
-			border-radius: 15px;
-			box-shadow: 0 2px 14px rgba($color-black, 0.4);
-			overflow: hidden;
+	& .card {
+		margin: 10px;
+		background-color: $color-white;
+		border-radius: 15px;
+		box-shadow: 0 2px 14px rgba($color-black, 0.4);
+		overflow: hidden;
 
-			&__description {
-				display: flex;
-				justify-content: space-between;
-				padding: 15px 10px;
+		&__description {
+			display: flex;
+			justify-content: space-between;
+			padding: 15px 10px;
 
-				& p {
-					margin: 5px 0;
+			& p {
+				margin: 5px 0;
+			}
+
+			&--icon {
+				height: 28px;
+				width: 28px;
+				font-size: 28px;
+				position: relative;
+				z-index: 1000;
+
+				& i {
+					position: absolute;
+					top: 0;
+					left: 0;
+					z-index: 100;
+					transition: transform 0.5s;
 				}
 
-				&--icon {
-					font-size: 28px;
+				& .background {
+					z-index: 105;
+					transform: scale(0);
+					background: linear-gradient(
+						to bottom right,
+						$color-secondary 0%,
+						$color-primary 100%
+					);
+					background-clip: text;
+					-webkit-background-clip: text;
+					-webkit-text-fill-color: transparent;
+					-moz-text-fill-color: transparent;
+				}
 
-					&--icon:after {
-						content: '';
+				&:hover {
+					& i:first-child {
+						opacity: 0;
+					}
+					& .background {
+						transform: scale(1);
 					}
 				}
 			}
 		}
+	}
 
-		& .img--la_palette_du_gout {
-			background: url('../../images/restaurants/la_palette_du_gout.jpg');
-		}
+	& .img--la_palette_du_gout {
+		background: url('../../images/restaurants/la_palette_du_gout.jpg');
+	}
 
-		& .img--la_note_enchantee {
-			background: url('../../images/restaurants/la_note_enchantee.jpg');
-		}
+	& .img--la_note_enchantee {
+		background: url('../../images/restaurants/la_note_enchantee.jpg');
+	}
 
-		& .img--a_la_francaise {
-			background: url('../../images/restaurants/a_la_francaise.jpg');
-		}
+	& .img--a_la_francaise {
+		background: url('../../images/restaurants/a_la_francaise.jpg');
+	}
 
-		& .img--le_delice_des_sens {
-			background: url('../../images/restaurants/le_delice_des_sens.jpg');
-		}
+	& .img--le_delice_des_sens {
+		background: url('../../images/restaurants/le_delice_des_sens.jpg');
+	}
 
-		& .img {
-			background-position: center;
-			background-repeat: no-repeat;
-			background-size: cover;
-			width: 100%;
-			height: 200px;
-			overflow: hidden;
-		}
+	& .img {
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		width: 100%;
+		height: 200px;
+		overflow: hidden;
 	}
 }
