--- a/styles/scss/components/_button.scss
+++ b/styles/scss/components/_button.scss
@@ -13,8 +13,14 @@
 	);
 
 	font-size: 20px;
+	transition: 0.5s;
 
 	&--restaurant {
 		margin: 50px;
 	}
+}
+
+.btn:hover {
+	box-shadow: 0px 4px 14px rgba($color-black, 0.6);
+	opacity: 0.8;
 }
