--- a/styles/scss/layout/_footer.scss
+++ b/styles/scss/layout/_footer.scss
@@ -29,3 +29,24 @@
 		}
 	}
 }
+
+@media (min-width: 640px) {
+	.footer {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+}
+
+@media (min-width: 1000px) {
+	.footer {
+		flex-direction: row;
+		justify-content: space-around;
+
+		&__list {
+			display: flex;
+			justify-content: space-around;
+			flex-grow: 1;
+		}
+	}
+} ;
