--- a/styles/scss/pages/_accueil.scss
+++ b/styles/scss/pages/_accueil.scss
@@ -27,7 +27,7 @@
 
 .fonctionnement {
 	padding: 3rem;
-	height: 40rem;
+	// height: 40rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -48,13 +48,18 @@
 			border-radius: 20px;
 			box-shadow: 0px 2px 10px rgba($color-black, 0.2);
 			padding: 1rem;
+			margin: 20px 0;
 			font-weight: bold;
 			display: flex;
 			align-items: center;
 
 			&-logo {
-				margin: 0 2.5rem;
-				color: $color-grey-very-light;
+				margin: 0 3rem;
+
+				& i {
+					font-size: 24px;
+					color: rgba($color-black, 0.6);
+				}
 			}
 
 			&:before {
@@ -71,6 +76,22 @@
 				display: inline-flex;
 				justify-content: center;
 				align-items: center;
+			}
+		}
+	}
+}
+
+@media (min-width: 1400px) {
+	.fonctionnement {
+		&__step {
+			flex-direction: row;
+			justify-content: space-around;
+			align-items: center;
+
+			&--items {
+				flex-grow: 1;
+				margin: 20px;
+				height: 80px;
 			}
 		}
 	}
@@ -165,5 +186,15 @@
 		width: 100%;
 		height: 200px;
 		overflow: hidden;
+	}
+}
+
+@media (min-width: 1400px) {
+	.restaurant {
+		&__nav {
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+			grid-gap: 5rem;
+		}
 	}
 }
