--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -66,32 +66,36 @@ h4 {
   margin: 0;
 }
 
-@-webkit-keyframes grow {
+@-webkit-keyframes spin {
   0% {
-    transform: scaleY(0);
-    opacity: 0;
-  }
-  50% {
-    transform: scaleY(1);
-    opacity: 1;
+    transorm: rotate(0deg);
   }
   100% {
-    transform: scaleY(0);
-    opacity: 0;
+    transform: rotate(360deg);
   }
 }
-@keyframes grow {
+@keyframes spin {
   0% {
-    transform: scaleY(0);
-    opacity: 0;
-  }
-  50% {
-    transform: scaleY(1);
-    opacity: 1;
+    transorm: rotate(0deg);
   }
   100% {
-    transform: scaleY(0);
-    opacity: 0;
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes spinreverse {
+  0% {
+    transorm: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+@keyframes spinreverse {
+  0% {
+    transorm: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
   }
 }
 @keyframes hide {
@@ -143,51 +147,35 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
-  -webkit-animation: hide 1s forwards 1s;
-  animation: hide 0.2s forwards 1s;
+  -webkit-animation: hide 1s forwards 3s;
+  animation: hide 0.2s forwards 3s;
 }
 .backdrop .loader {
-  width: 110px;
+  width: 100px;
   height: 100px;
   display: inline-block;
   vertical-align: middle;
   position: relative;
-}
-.backdrop .loader span {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 80px;
-  top: 0;
-  width: 30px;
-  height: 100px;
-  background-color: #99e2d0;
-  -webkit-animation: grow 1s linear -0.66s infinite;
-  animation: grow 1s linear -0.66s infinite;
+  border-radius: 100px;
+  border: 12px solid transparent;
+  border-top-color: #9356dc;
+  border-bottom-color: #9356dc;
+  -webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
 }
 .backdrop .loader::after {
   content: "";
-  display: block;
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 30px;
-  height: 100px;
-  background-color: #99e2d0;
-  -webkit-animation: grow 1s linear infinite;
-  animation: grow 1s linear infinite;
-}
-.backdrop .loader::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 40px;
-  top: 0;
-  width: 30px;
-  height: 100px;
-  background-color: #99e2d0;
-  -webkit-animation: grow 1s linear -0.33s infinite;
-  animation: grow 1s linear -0.33s infinite;
+  top: 12px;
+  bottom: 12px;
+  left: 12px;
+  right: 12px;
+  border-radius: 50px;
+  border: 12px solid transparent;
+  border-top-color: rgba(147, 86, 220, 0.6);
+  border-bottom-color: rgba(147, 86, 220, 0.6);
+  -webkit-animation: spinreverse 2s linear infinite;
+  animation: spinreverse 2s linear infinite;
 }
 
 .header {
@@ -465,6 +453,12 @@ h4 {
   justify-content: center;
   align-items: center;
 }
+.fonctionnement__step--items:hover {
+  background-color: rgba(147, 86, 220, 0.1);
+}
+.fonctionnement__step--items:hover .fonctionnement__step--items-logo i {
+  color: #9356dc;
+}
 
 @media (min-width: 1400px) {
   .fonctionnement__step {
@@ -491,6 +485,27 @@ h4 {
   background-color: white;
   border-radius: 15px;
   box-shadow: 0 2px 14px rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+  position: relative;
+}
+.restaurant .card .img--la_palette_du_gout {
+  background: url("../../images/restaurants/la_palette_du_gout.jpg");
+}
+.restaurant .card .img--la_note_enchantee {
+  background: url("../../images/restaurants/la_note_enchantee.jpg");
+}
+.restaurant .card .img--a_la_francaise {
+  background: url("../../images/restaurants/a_la_francaise.jpg");
+}
+.restaurant .card .img--le_delice_des_sens {
+  background: url("../../images/restaurants/le_delice_des_sens.jpg");
+}
+.restaurant .card .img {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 175px;
   overflow: hidden;
 }
 .restaurant .card__description {
@@ -530,25 +545,20 @@ h4 {
 .restaurant .card__description--icon:hover .background {
   transform: scale(1);
 }
-.restaurant .img--la_palette_du_gout {
-  background: url("../../images/restaurants/la_palette_du_gout.jpg");
-}
-.restaurant .img--la_note_enchantee {
-  background: url("../../images/restaurants/la_note_enchantee.jpg");
-}
-.restaurant .img--a_la_francaise {
-  background: url("../../images/restaurants/a_la_francaise.jpg");
-}
-.restaurant .img--le_delice_des_sens {
-  background: url("../../images/restaurants/le_delice_des_sens.jpg");
-}
-.restaurant .img {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 200px;
-  overflow: hidden;
+.restaurant .card.new:after {
+  content: "Nouveau";
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 10px;
+  right: 10px;
+  height: 40px;
+  width: 100px;
+  z-index: 1000;
+  background-color: #99e2d0;
+  color: #2c9c81;
+  font-weight: bold;
 }
 
 @media (min-width: 1400px) {
