--- a/styles/scss/components/_loader.scss
+++ b/styles/scss/components/_loader.scss
@@ -10,53 +10,37 @@
 	justify-content: center;
 	align-items: center;
 
-	-webkit-animation: hide 1s forwards 1s;
-	animation: hide 0.2s forwards 1s;
+	-webkit-animation: hide 1s forwards 3s;
+	animation: hide 0.2s forwards 3s;
 
 	& .loader {
-		width: 110px;
+		width: 100px;
 		height: 100px;
 		display: inline-block;
 		vertical-align: middle;
 		position: relative;
-
-		& span {
-			content: '';
-			display: block;
-			position: absolute;
-			left: 80px;
-			top: 0;
-			width: 30px;
-			height: 100px;
-			background-color: #99e2d0;
-			-webkit-animation: grow 1s linear -0.66s infinite;
-			animation: grow 1s linear -0.66s infinite;
-		}
+		border-radius: 100px;
+		border: 12px solid transparent;
+		border-top-color: $color-primary;
+		border-bottom-color: $color-primary;
+		-webkit-animation: spin 1s linear infinite;
+		animation: spin 1s linear infinite;
 
 		&::after {
 			content: '';
-			display: block;
 			position: absolute;
-			left: 0;
-			top: 0;
-			width: 30px;
-			height: 100px;
-			background-color: #99e2d0;
-			-webkit-animation: grow 1s linear infinite;
-			animation: grow 1s linear infinite;
-		}
+			top: 12px;
+			bottom: 12px;
+			left: 12px;
+			right: 12px;
+			border-radius: 50px;
+			border: 12px solid transparent;
+			border-top-color: rgba($color-primary, 0.6);
+			border-bottom-color: rgba($color-primary, 0.6);
 
-		&::before {
-			content: '';
-			display: block;
-			position: absolute;
-			left: 40px;
-			top: 0;
-			width: 30px;
-			height: 100px;
-			background-color: #99e2d0;
-			-webkit-animation: grow 1s linear -0.33s infinite;
-			animation: grow 1s linear -0.33s infinite;
+			-webkit-animation: spinreverse 2s linear infinite;
+
+			animation: spinreverse 2s linear infinite;
 		}
 	}
 }
