--- a/styles/scss/pages/_accueil.scss
+++ b/styles/scss/pages/_accueil.scss
@@ -77,6 +77,14 @@
 				justify-content: center;
 				align-items: center;
 			}
+
+			&:hover {
+				background-color: rgba($color-primary, 0.1);
+
+				& .fonctionnement__step--items-logo i {
+					color: $color-primary;
+				}
+			}
 		}
 	}
 }
@@ -112,6 +120,32 @@
 		border-radius: 15px;
 		box-shadow: 0 2px 14px rgba($color-black, 0.4);
 		overflow: hidden;
+		position: relative;
+
+		& .img--la_palette_du_gout {
+			background: url('../../images/restaurants/la_palette_du_gout.jpg');
+		}
+
+		& .img--la_note_enchantee {
+			background: url('../../images/restaurants/la_note_enchantee.jpg');
+		}
+
+		& .img--a_la_francaise {
+			background: url('../../images/restaurants/a_la_francaise.jpg');
+		}
+
+		& .img--le_delice_des_sens {
+			background: url('../../images/restaurants/le_delice_des_sens.jpg');
+		}
+
+		& .img {
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			width: 100%;
+			height: 175px;
+			overflow: hidden;
+		}
 
 		&__description {
 			display: flex;
@@ -161,31 +195,24 @@
 				}
 			}
 		}
-	}
 
-	& .img--la_palette_du_gout {
-		background: url('../../images/restaurants/la_palette_du_gout.jpg');
-	}
-
-	& .img--la_note_enchantee {
-		background: url('../../images/restaurants/la_note_enchantee.jpg');
-	}
-
-	& .img--a_la_francaise {
-		background: url('../../images/restaurants/a_la_francaise.jpg');
-	}
-
-	& .img--le_delice_des_sens {
-		background: url('../../images/restaurants/le_delice_des_sens.jpg');
-	}
-
-	& .img {
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
-		width: 100%;
-		height: 200px;
-		overflow: hidden;
+		&.new {
+			&:after {
+				content: 'Nouveau';
+				position: absolute;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				top: 10px;
+				right: 10px;
+				height: 40px;
+				width: 100px;
+				z-index: 1000;
+				background-color: $color-tertiary;
+				color: darken($color-tertiary, 35%);
+				font-weight: bold;
+			}
+		}
 	}
 }
 
