--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -116,6 +116,14 @@ h4 {
     opacity: 1;
   }
 }
+@keyframes changeWidth {
+  0% {
+    width: 80%;
+  }
+  100% {
+    width: 70%;
+  }
+}
 .btn {
   border: none;
   outline: none;
@@ -273,13 +281,14 @@ h4 {
 }
 .menu__section--list-item .desc {
   width: 80%;
-  margin-right: auto;
 }
 .menu__section--list-item p {
   margin: 0;
   margin-top: 5px;
   font-weight: 400;
   font-size: 14px;
+  display: block;
+  text-overflow: ellipsis;
 }
 .menu__section--list-item .price {
   transition: 0.5s;
@@ -306,12 +315,11 @@ h4 {
   transition: 0.5s;
 }
 .menu__section--list-item:hover .desc {
-  width: 70%;
+  animation: changeWidth 0.5s linear forwards;
 }
 .menu__section--list-item:hover p {
-  text-overflow: ellipsis;
-  white-space: nowrap;
   overflow: hidden;
+  white-space: nowrap;
 }
 .menu__section--list-item:hover .price {
   margin-right: 60px;
