--- a/styles/scss/base/_animations.scss
+++ b/styles/scss/base/_animations.scss
@@ -1,6 +1,6 @@
 @keyframes spin {
 	0% {
-		transorm: rotate(0deg);
+		transform: rotate(0deg);
 	}
 
 	100% {
@@ -10,7 +10,7 @@
 
 @keyframes spinreverse {
 	0% {
-		transorm: rotate(0deg);
+		transform: rotate(0deg);
 	}
 
 	100% {
