--- a/styles/scss/pages/_accueil.scss
+++ b/styles/scss/pages/_accueil.scss
@@ -64,7 +64,8 @@
 
 			&:before {
 				position: absolute;
-				top: translateY(50%);
+				top: 50%;
+				transform: translateY(-50%);
 				left: -10px;
 				content: counter(item);
 				background: $color-primary;
